[gd_scene load_steps=6 format=3 uid="uid://baucwx4t5e2fs"]

[ext_resource type="Script" path="res://subscenes/broadcast/full_screen_round/playing_1v1.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bc5hm8ntl1csg" path="res://assets/arrow-up.png" id="3_xgk4b"]
[ext_resource type="Theme" uid="uid://7tc184hs3sib" path="res://themes_fonts/space_theme.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://rs80yyamjn58" path="res://assets/arrow-up_hover.png" id="4_t8p3f"]
[ext_resource type="Texture2D" uid="uid://ddx4oxqtwth81" path="res://assets/arrow-up_disabled.png" id="5_g6w4q"]

[node name="Playing1v1" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4")
script = ExtResource("1")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="Main"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "1 v 1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Main"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="Main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerOne" type="MarginContainer" parent="Main/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Spacer" type="Control" parent="Main/Container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="Middle" type="VBoxContainer" parent="Main/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Empty" type="Control" parent="Main/Container/Middle"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2

[node name="Label" type="Label" parent="Main/Container/Middle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Games"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Main/Container/Middle"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="MapPool" type="VBoxContainer" parent="Main/Container/Middle"]
layout_mode = 2

[node name="Empty2" type="Control" parent="Main/Container/Middle"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Main/Container/Middle"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Empty3" type="Control" parent="Main/Container/Middle"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2

[node name="Label2" type="Label" parent="Main/Container/Middle"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next up:"
horizontal_alignment = 1

[node name="MapName" type="Label" parent="Main/Container/Middle"]
layout_mode = 2
size_flags_horizontal = 3
text = "..."
horizontal_alignment = 1

[node name="MapImage" type="TextureRect" parent="Main/Container/Middle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
expand_mode = 1
stretch_mode = 5

[node name="VsData" type="Label" parent="Main/Container/Middle"]
layout_mode = 2
size_flags_vertical = 2
text = "R 0 vs 0 R"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Main/Container"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="PlayerTwo" type="MarginContainer" parent="Main/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="WinnerPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_force_pass_scroll_events = false

[node name="List" type="VBoxContainer" parent="WinnerPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="WinnerPanel/List"]
layout_mode = 2
text = "Victory!"
horizontal_alignment = 1

[node name="Name" type="Label" parent="WinnerPanel/List"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "Name"
horizontal_alignment = 1

[node name="Avatar" type="TextureRect" parent="WinnerPanel/List"]
custom_minimum_size = Vector2(700, 700)
layout_mode = 2
expand_mode = 5

[node name="HideButton" type="TextureButton" parent="WinnerPanel/List"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_xgk4b")
texture_pressed = ExtResource("4_t8p3f")
texture_hover = ExtResource("4_t8p3f")
texture_disabled = ExtResource("5_g6w4q")
texture_focused = ExtResource("3_xgk4b")
flip_v = true

[connection signal="pressed" from="WinnerPanel/List/HideButton" to="." method="_on_hide_button_pressed"]
